# rusteam

./: .kodiak.toml  CHANGELOG.org  Cargo.toml  Dockerfile  README.md
.circleci/: config.yml
.github/workflows/: main.yml
src/: filesystem.rs  game.rs  lib.rs  main.rs
tests/: version-numbers.rs
