[package]
name = "rusteam"
version = "0.4.6-alpha.0"
description = "Manage your games on the terminal"
authors = ["Oleksii Filonenko <brightone@protonmail.com>"]
homepage = "https://github.com/filalex77/rusteam"
documentation = "https://docs.rs/rusteam"
repository = "https://github.com/filalex77/rusteam"
readme = "README.md"
keywords = ["cli", "games", "gaming", "steam", "library"]
categories = ["command-line-utilities", "games"]
license = "GPL-3.0-or-later"
edition = "2018"

[[package.metadata.release.pre-release-replacements]]
file = "src/lib.rs"
search = "\"https://docs.rs/rusteam/[^\"]\""
replace = "\"https://docs.rs/rusteam/{{version}}\""

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.org"
search = "Unreleased"
replace = "v{{version}}"

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.org"
search = "TBD"
replace = "{{date}}"

[badges]
circle-ci = { repository = "filalex77/rusteam" }
is-it-maintained-issue-resolution = { repository = "filalex77/rusteam" }
is-it-maintained-open-issues = { repository = "filalex77/rusteam" }
maintenance = {status = "actively-developed"}

[dependencies]
colored = "1.8"
directories = "2.0.2"
serde = { version = "1.0.98", features = ["derive"] }
snafu = "0.4"
structopt = "0.2"
toml = "0.5"

[dev-dependencies]
version-sync = "0.8.1"
