[package]
name = "rusteam"
version = "0.5.2"
description = "Manage your games on the terminal"
authors = ["Oleksii Filonenko <brightone@protonmail.com>"]
homepage = "https://github.com/filalex77/rusteam"
documentation = "https://docs.rs/rusteam"
repository = "https://github.com/filalex77/rusteam"
readme = "README.md"
keywords = ["cli", "games", "gaming", "steam", "library"]
categories = ["command-line-utilities", "games"]
license = "GPL-3.0-or-later"
edition = "2018"

[[package.metadata.release.pre-release-replacements]]
file = "src/lib.rs"
search = "docs.rs/rusteam/[^\"]+"
replace = "docs.rs/rusteam/{{version}}"

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.org"
search = "Unreleased"
replace = "v{{version}}"

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.org"
search = "TBD"
replace = "{{date}}"

[badges]
circle-ci = { repository = "filalex77/rusteam" }
is-it-maintained-issue-resolution = { repository = "filalex77/rusteam" }
is-it-maintained-open-issues = { repository = "filalex77/rusteam" }
maintenance = {status = "actively-developed"}

[dependencies]
anyhow = "1.0.26"
directories = "2.0.2"
paw = "1.0.0"
serde = { version = "1.0.104", features = ["derive"] }
structopt = { version = "0.3.12", features = ["paw"] }
thiserror = "1.0.14"
toml = "0.5.6"

[dev-dependencies]
version-sync = "0.8.1"
